--- a/index.html
+++ b/index.html
@@ -89,22 +89,23 @@
 
         #camera_area {
             position: relative;
-            /* width: 70vw;
+            width: 70vw;
             height: 70vw;
             border-radius: 50%;
             margin: 0 auto;
             overflow: hidden;
-            background-color: rgb(187, 212, 245); */
+            background-color: rgb(187, 212, 245); 
         }
 
         #camera_video{
-
+            position: absolute;
+            width:100vw;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
         }
 
-        #camera_view_area{
-            width: 70vw;
-            height: 70vw;
-        }
+       
 
         #img_priview_wrap{
             display: flex;
@@ -119,7 +120,7 @@
 </head>
 
 <body>
-    5
+    6
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
@@ -135,13 +136,11 @@
 
     <div id="camera_area">
         <video id="camera_video" autoplay="" muted="" playsinline="true" webkit-playsinline="true"></video>
-        <div id="camera_view_area"></div>
     </div>
     <div id="img_priview_wrap">
 
     </div>
     <script type='text/javascript'>
-        console.log()
             var localVideo = document.getElementById("camera_video");
             // var localCanvas = document.getElementById("face_area");
             // var context = localCanvas.getContext('2d');
@@ -233,6 +232,9 @@
                     }
                     localStream = stream;
                     localVideo.srcObject = stream;
+
+                    console.log(localVideo.videoWidth, localVideo.videoHeight)
+
                     // localVideo.onplay = poll;
                     setTimeout(() => {
                         localVideo.play();
