--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             align-items: center;
             width: 70vw;
             height: 70vw;
-            border-radius: 50%;
+            border-radius: 35vw;
             margin: 0 auto;
-            overflow: hidden;
             background-color: rgb(187, 212, 245); 
+            overflow: hidden;
         }
 
         #camera_video{
@@ -125,7 +125,7 @@
 </head>
 
 <body>
-    7
+    8
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
