--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             align-items: center;
             width: 70vw;
             height: 70vw;
-            border-radius: 35vw;
             margin: 0 auto;
             background-color: rgb(187, 212, 245); 
+            border-radius: 50%;
             overflow: hidden;
         }
 
@@ -125,7 +125,7 @@
 </head>
 
 <body>
-    8
+    9
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
@@ -238,11 +238,12 @@
                     localStream = stream;
                     localVideo.srcObject = stream;
 
-                    console.log(localVideo.videoWidth, localVideo.videoHeight)
+                    
 
                     // localVideo.onplay = poll;
                     setTimeout(() => {
                         localVideo.play();
+                        console.log(localVideo.videoWidth, localVideo.videoHeight)
                     }, 100)
 
                     //每隔一秒就截图
