--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
 
         #camera_video{
-
+            display: block;
             /* position: absolute;
             width:100vw;
             top:50%;
@@ -125,7 +125,7 @@
 </head>
 
 <body>
-    9
+    10
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
