--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             height: 70vw;
             margin: 0 auto;
             background-color: rgb(187, 212, 245); 
-            border-radius: 50%;
+            border-radius: 50% !important;
             overflow: hidden;
         }
 
@@ -125,7 +125,7 @@
 </head>
 
 <body>
-    10
+    11
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
