--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 
 <body>
-    12
+    13
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
@@ -243,7 +243,12 @@
                     // localVideo.onplay = poll;
                     setTimeout(() => {
                         localVideo.play();
-                        console.log(localVideo.videoWidth, localVideo.videoHeight)
+                        console.log(localVideo.videoWidth, localVideo.videoHeight, document.body.clientWidth)
+                        if(localVideo.videoWidth> localVideo.videoHeight){
+                            localVideo.videoHeight.style.height= (document.body.clientWidth*7)/10+'px';
+                        }else{
+                            localVideo.videoHeight.style.width = (document.body.clientWidth*7)/10+'px';
+                        }
                     }, 100)
 
                     //每隔一秒就截图
