--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>face-test-2</title>
     <link rel='stylesheet' href=''>
     <style>
+        html,body{
+            margin:0;
+            padding:0;
+        }
         #notice_wrap{
             margin-bottom:10px;
         }
@@ -88,9 +92,10 @@
 
 
         #camera_area{
-            /* display: flex; */
-            /* justify-content: center; */
-            /* align-items: center; */
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
             width: 70vw;
             height: 70vw;
             border-radius: 50% !important;
@@ -101,11 +106,11 @@
 
         #camera_video{
             display: block;
-            /* position: absolute;
+            position: absolute;
             width:100vw;
             top:50%;
             left:50%;
-            transform: translate(-50%,-50%); */
+            transform: translate(-50%,-50%);
             /* width:100vw; */
 
         }
@@ -125,7 +130,7 @@
 </head>
 
 <body>
-    15
+    16
     <div id="notice_wrap">
         <p>1.点击开始人脸建档，允许调用摄像头</p>
         <p>2.将人脸置于取景框内</p>
