--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
             display: block;
             border: none;
             outline: none;
-            width: 100px;
-            height: 50px;
-            background-color: rgb(240, 159, 28);
+            background-color: rgb(51, 74, 244);
             color: #fff;
             cursor: pointer;
             border-radius: 5px;
+            padding:5px 10px;
             margin: 0 auto 50px auto;
             font-size: 14px;
         }
 
         #open_camera_button:active{
-            background-color: rgb(202, 135, 27);
+            background-color: rgb(40, 59, 206);
         }
 
         /* #stop_camera_button {
@@ -131,7 +130,7 @@
 </head>
 
 <body>
-    21
+    22
     <div id="content_wrap">
         <div id="notice_wrap">
             <p>1.点击开始人脸建档，允许调用摄像头</p>
