--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             color: #fff;
             cursor: pointer;
             border-radius: 5px;
-            padding:5px 10px;
+            padding:8px 10px;
             margin: 0 auto 50px auto;
             font-size: 14px;
         }
@@ -96,11 +96,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 70vw;
-            height: 70vw;
+            /* width: 70vw; */
+            /* height: 70vw; */
             border-radius: 50% !important;
             margin: 0 auto;
-            background-color: rgb(187, 212, 245); 
+            background-color: rgb(0, 0, 0); 
             overflow: hidden;
         }
 
@@ -130,7 +130,7 @@
 </head>
 
 <body>
-    22
+    23
     <div id="content_wrap">
         <div id="notice_wrap">
             <p>1.点击开始人脸建档，允许调用摄像头</p>
@@ -154,6 +154,16 @@
     </div>
    
     <script type='text/javascript'>
+        var cameraArea=document.getElementById('camera_area');
+        console.log(document.documentElement.clientWidth, document.documentElement.clientHeight)
+        var viewWidth= document.documentElement.clientWidth;
+        var viewHeight= document.documentElement.clientHeight;
+        if(viewHeight>viewHeight){
+            cameraArea.style.width=cameraArea.style.height= (viewHeight*7)/10+'px';
+        }else{
+            cameraArea.style.width = cameraArea.style.height = (viewWidth * 7) / 10 + 'px';
+        }
+
             var localVideo = document.getElementById("camera_video");
             // var localCanvas = document.getElementById("face_area");
             // var context = localCanvas.getContext('2d');
@@ -254,9 +264,9 @@
                         localVideo.play();
                         // console.log(localVideo.videoWidth, localVideo.videoHeight, document.body.clientWidth)
                         if(localVideo.videoWidth> localVideo.videoHeight){
-                            localVideo.style.height= ((document.body.clientWidth*7)/10)+'px';
+                            localVideo.style.height= ((viewWidth*7)/10)+'px';
                         }else{
-                            localVideo.style.width = ((document.body.clientWidth*7)/10)+'px';
+                            localVideo.style.width = ((viewHeight*7)/10)+'px';
                         }
                     }, 100)
 
