--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             border-radius: 50% !important;
             margin: 0 auto;
             background-color: rgb(0, 0, 0); 
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         #camera_video{
@@ -130,7 +130,7 @@
 </head>
 
 <body>
-    23
+    24
     <div id="content_wrap">
         <div id="notice_wrap">
             <p>1.点击开始人脸建档，允许调用摄像头</p>
