--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             border-radius: 50% !important;
             margin: 0 auto;
             background-color: rgb(0, 0, 0); 
-            /* overflow: hidden; */
+            overflow: hidden;
         }
 
         #camera_video{
@@ -121,6 +121,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            margin-top:5px;
         }
 
         #img_priview_wrap img{
@@ -130,7 +131,7 @@
 </head>
 
 <body>
-    25
+    26
     <div id="content_wrap">
         <div id="notice_wrap">
             <p>1.点击开始人脸建档，允许调用摄像头</p>
@@ -215,6 +216,10 @@
                     clearInterval(cutTimer)
                     //展示截图
                     showCutImgFn();
+                    alert('创建人脸档案失败！')
+                    stopStreamFn();
+                    cutImgArr=[];
+                    document.getElementById("img_priview_wrap").innerHTML='';
                 }
 
                 // let img = document.createElement("img");
