--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
        
         #tools_wrap {
             display: flex;
+            margin:20px 0;
         }
 
         #open_camera_button {
@@ -40,7 +41,7 @@
             cursor: pointer;
             border-radius: 5px;
             padding:8px 10px;
-            margin: 0 auto 50px auto;
+            margin: 0 auto;
             font-size: 14px;
         }
 
@@ -131,7 +132,6 @@
 </head>
 
 <body>
-    27
     <div id="content_wrap">
         <div id="notice_wrap">
             <p>1.点击开始人脸建档，允许调用摄像头</p>
