--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
    
     <script type='text/javascript'>
         var cameraArea=document.getElementById('camera_area');
-        console.log(document.documentElement.clientWidth, document.documentElement.clientHeight)
+        // console.log(document.documentElement.clientWidth, document.documentElement.clientHeight)
         var viewWidth= document.documentElement.clientWidth;
         var viewHeight= document.documentElement.clientHeight;
         var customVideoAreaWidth;
